Updating links to test links

--- a/charities-and-giving.html
+++ b/charities-and-giving.html
@@ -493,12 +493,12 @@ background-color: #26384a !important
             <div class="col-md-10">
                 <!-- change to colcount-md-1 if you only have 2-3 most requested items -->
                 <ul class="wb-eqht mrgn-tp-md mrgn-bttm-md colcount-md-2">
-                    <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return.html" rel="external">Filing the T3010 annual return</a></li>
-                    <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/issuing-receipts.html" rel="external">Issuing receipts</a></li>
-                    <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/toolbox-directors-officers-volunteers/business-account.html">Access our online services for charities</a></li>
-                    <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/making-changes.html">Making a change to your organization</a></li>
+                    <li><a href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return.html" rel="external">Filing the T3010 annual return</a></li>
+                    <li><a href="https://cra-design.github.io/charities/operating-a-registered-charity/issuing-receipts.html" rel="external">Issuing receipts</a></li>
+                    <li><a href="https://cra-design.github.io/charities/operating-a-registered-charity/toolbox-directors-officers-volunteers/business-account.html">Access our online services for charities</a></li>
+                    <li><a href="https://cra-design.github.io/charities/operating-a-registered-charity/making-changes.html">Making a change to your organization</a></li>
                     <li><a href="https://www.canada.ca/en/revenue-agency/news/e-services/canada-revenue-electronic-mailing-lists/electronic-mailing-list-charities-giving-whats-new.html">Subscribe to our electronic mailing list</a></li>
-                    <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/contact-charities-directorate.html" rel="external">Contact information</a></li>
+                    <li><a href="https://cra-design.github.io/charities/contact-charities-directorate.html" rel="external">Contact information</a></li>
                 </ul>
             </div>
         </div>
@@ -519,27 +519,27 @@ background-color: #26384a !important
                     <p>Lists of qualified donees, their application processes and obligations.</p>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <h3><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/charities-giving-a-index.html">A to Z index of topics for charities</a></h3>
+                    <h3><a href="https://cra-design.github.io/charities/charities-giving-a-index.html">A to Z index of topics for charities</a></h3>
                     <p>Search for information about charities and giving.</p>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <h3><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status.html">Registering for charitable or other qualified donee status</a></h3>
+                    <h3><a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status.html">Registering for charitable or other qualified donee status</a></h3>
                     <p>Apply for charitable registration or other qualified donee. <span class="nowrap">Re-registration.</span> Objections and appeals.</p>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <h3><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity.html">Operating a registered charity</a></h3>
+                    <h3><a href="https://cra-design.github.io/charities/operating-a-registered-charity.html">Operating a registered charity</a></h3>
                     <p>Filing a return, gifting and receipting, charitable activities, books and records.</p>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <h3><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/fundraising-activities-charities-other-qualified-donees.html">Fundraising activities</a></h3>
+                    <h3><a href="https://cra-design.github.io/charities/operating-a-registered-charity/fundraising-activities-charities-other-qualified-donees.html">Fundraising activities</a></h3>
                     <p>Activities, issuing receipts for fundraising events, <span class="nowrap">cause-related</span> marketing.</p>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <h3><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/revoking-registered-status.html">Revoking registered status</a></h3>
+                    <h3><a href="https://cra-design.github.io/charities/revoking-registered-status.html">Revoking registered status</a></h3>
                     <p>Types of revocation, consequences, annulment, <span class="nowrap">re-registration.</span></p>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <h3><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/compliance-audits-and-sanctions.html">Compliance, audits and sanctions</a></h3>
+                    <h3><a href="https://cra-design.github.io/charities/compliance-audits-and-sanctions.html">Compliance, audits and sanctions</a></h3>
                     <p>Audit process, consequences of <span class="nowrap">non-compliance,</span> sanctions and appeal rights.</p>
                 </div>
                 <div class="col-lg-4 col-md-6">
@@ -547,11 +547,11 @@ background-color: #26384a !important
                     <p>Who can issue official donation receipts, how to claim donations on your income tax and benefit return, how to donate wisely and avoid fraud.</p>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <h3><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/guidance-videos-forms.html">Guidance, videos, forms and more</a></h3>
+                    <h3><a href="https://cra-design.github.io/charities/guidance-videos-forms.html">Guidance, videos, forms and more</a></h3>
                     <p>Guidance products and policies, videos, forms,&nbsp;checklists and Charities information sessions.</p>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <h3><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/charity-news-contact-us.html">Charity news and contact us</a></h3>
+                    <h3><a href="https://cra-design.github.io/charities/charity-news-contact-us.html">Charity news and contact us</a></h3>
                     <p>Recent news and updates on our web pages.</p>
                 </div>
                 <div class="col-lg-4 col-md-6">
@@ -571,7 +571,7 @@ background-color: #26384a !important
                     <!-- feature 1 -->
                     <div class="col-md-4 col-sm-6 mrgn-rght-0">
                         <div class="well eqht-trgt">
-                            <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/guidance-videos-forms/charities-information-sessions/register-charities-webinars.html" data-gc-analytics="promo:promotionalfeature">
+                            <a href="https://cra-design.github.io/charities/guidance-videos-forms/charities-information-sessions/register-charities-webinars.html" data-gc-analytics="promo:promotionalfeature">
                                 <figure>
                                     <div>
                                         <img src="https://www.canada.ca/content/dam/cra-arc/camp-promo/features/ft-20240219-360x203.jpg" alt="" class="img-responsive thumbnail mrgn-bttm-sm">
@@ -589,7 +589,7 @@ background-color: #26384a !important
                     <!-- feature 2 -->
                     <div class="col-md-4 col-sm-6 mrgn-rght-0">
                         <div class="well eqht-trgt">
-                            <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/fundraising-activities-charities-other-qualified-donees/fundraising-charitable-work.html" data-gc-analytics="promo:promotionalfeature">
+                            <a href="https://cra-design.github.io/charities/operating-a-registered-charity/fundraising-activities-charities-other-qualified-donees/fundraising-charitable-work.html" data-gc-analytics="promo:promotionalfeature">
                                 <figure>
                                     <div>
                                         <img src="https://www.canada.ca/content/dam/cra-arc/camp-promo/features/ft-240125-360x203.jpg" alt="" class="img-responsive thumbnail mrgn-bttm-sm">
@@ -607,7 +607,7 @@ background-color: #26384a !important
                     <!-- feature 3 -->
                     <div class="col-md-4 col-sm-6 mrgn-rght-0">
                         <div class="well eqht-trgt">
-                            <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/issuing-receipts.html" data-gc-analytics="promo:promotionalfeature">
+                            <a href="https://cra-design.github.io/charities/operating-a-registered-charity/issuing-receipts.html" data-gc-analytics="promo:promotionalfeature">
                                 <figure>
                                     <div>
                                         <img src="https://www.canada.ca/content/dam/cra-arc/camp-promo/features/ssng_rcpts_hlds.jpg" alt="" class="img-responsive thumbnail mrgn-bttm-sm">
