--- a/operating-a-registered-charity/annual-spending-requirement-disbursement-quota/disbursement-quota-calculation.html
+++ b/operating-a-registered-charity/annual-spending-requirement-disbursement-quota/disbursement-quota-calculation.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/annual-spending-requirement-disbursement-quota/disbursement-quota-calculation.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/annual-spending-requirement-disbursement-quota/disbursement-quota-calculation.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/operating-a-registered-charity/annual-spending-requirement-disbursement-quota/disbursement-quota-calculation.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/operating-a-registered-charity/annual-spending-requirement-disbursement-quota/disbursement-quota-calculation.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/exploitation-organisme-bienfaisance-enregistre/exigences-relatives-depenses-annuelles-contingent-versements/calcul-contingent-versements.html"/>
 	
@@ -649,12 +649,12 @@ $35,000 + $25,000 = $60,000</li>
     
         <h2>Related topics</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/charitable-activities.html">Charitable activities</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/receiving-gifts/what-a-gift.html">What is a gift?</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/receiving-gifts/anti-avoidance-rules-designated-gifts.html">Anti-avoidance rules and designated gifts</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/charities-making-grants-non-qualified-donees.html">Guidance CG-032, Registered charities making grants to non-qualified donees</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/annual-spending-requirement-disbursement-quota/disbursement-quota-shortfalls-excesses.html">Disbursement quota shortfalls and excesses</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/advantages-obligations-becoming-registered-charity.html">Advantages and obligations of becoming a registered charity</a></li>
+<li><a href="https://cra-design.github.io/charities/operating-a-registered-charity/charitable-activities.html">Charitable activities</a></li>
+<li><a href="https://cra-design.github.io/charities/operating-a-registered-charity/receiving-gifts/what-a-gift.html">What is a gift?</a></li>
+<li><a href="https://cra-design.github.io/charities/operating-a-registered-charity/receiving-gifts/anti-avoidance-rules-designated-gifts.html">Anti-avoidance rules and designated gifts</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/charities-making-grants-non-qualified-donees.html">Guidance CG-032, Registered charities making grants to non-qualified donees</a></li>
+<li><a href="https://cra-design.github.io/charities/operating-a-registered-charity/annual-spending-requirement-disbursement-quota/disbursement-quota-shortfalls-excesses.html">Disbursement quota shortfalls and excesses</a></li>
+<li><a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/advantages-obligations-becoming-registered-charity.html">Advantages and obligations of becoming a registered charity</a></li>
 </ul>
 
     
