--- a/other-organizations-that-issue-donation-receipts-qualified-donees/registered-journalism-organizations/applying-registered-journalism-organization.html
+++ b/other-organizations-that-issue-donation-receipts-qualified-donees/registered-journalism-organizations/applying-registered-journalism-organization.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-registered-journalism-organization.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-registered-journalism-organization.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-registered-journalism-organization.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-registered-journalism-organization.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/demande-enregistrement-organisme-bienfaisance-donataire-reconnu/presenter-demande-enregistrement-autre-donataire-reconnu/demander-devenir-organisation-journalistique-enregistree.html"/>
 	
@@ -308,7 +308,7 @@ Ottawa ON&nbsp; K1A 0L5</p>
 </ul>
 <p>For more information on these criteria and other requirements for <abbr title="Registered journalism organization">RJO</abbr>s under the Act, see&nbsp;<a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/business-tax-credits/qualified-canadian-journalism-organization/guidance.html">Guidance on the income tax measures to support journalism</a>.</p>
 <p>An applicant journalism organization that receives a notice refusing its registration as an <abbr title="Registered journalism organization">RJO</abbr> can object to the decision by filing a notice of objection.</p>
-<p>If you have questions about becoming an <abbr title="Registered journalism organization">RJO</abbr>, <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/contact-charities-directorate.html">contact the Charities Directorate</a>.</p>
+<p>If you have questions about becoming an <abbr title="Registered journalism organization">RJO</abbr>, <a href="https://cra-design.github.io/charities/contact-charities-directorate.html">contact the Charities Directorate</a>.</p>
 
     
 
