--- a/registering-charitable-qualified-donee-status/apply-become-registered-charity/application-review-process.html
+++ b/registering-charitable-qualified-donee-status/apply-become-registered-charity/application-review-process.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/application-review-process.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/application-review-process.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/application-review-process.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/application-review-process.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/demande-enregistrement-organisme-bienfaisance-donataire-reconnu/presenter-demande-organisme-bienfaisance/processus-examen-demandes.html"/>
 	
@@ -375,8 +375,8 @@ Newmarket ON&nbsp; L3Y 0E9</p>
 <p>If we approve registration, we will send a notice of registration. This notice includes an organization's:</p>
 <ul>
 <li>rights and responsibilities as a registered charity</li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/registration-number.html">registration number</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-statement-017-effective-date-registration.html">effective date of registration</a></li>
+<li><a href="https://cra-design.github.io/charities/operating-a-registered-charity/registration-number.html">registration number</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/policy-statement-017-effective-date-registration.html">effective date of registration</a></li>
 </ul>
 <p>The notice of registration should be kept in a safe place - accessible to all authorized representatives of the charity.</p>
 
@@ -401,9 +401,9 @@ Newmarket ON&nbsp; L3Y 0E9</p>
     
         <h2>References</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/apply/create-application-checklist.html">Apply to become a registered charity<br></a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/apply/describing-your-activities.html">Describing your activities</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/what-a-governing-document.html">What is a governing document?</a></li>
+<li><a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/apply/create-application-checklist.html">Apply to become a registered charity<br></a></li>
+<li><a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/apply/describing-your-activities.html">Describing your activities</a></li>
+<li><a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/what-a-governing-document.html">What is a governing document?</a></li>
 </ul>
 
     
