--- a/registering-charitable-qualified-donee-status/apply-become-registered-charity/apply/create-application-checklist.html
+++ b/registering-charitable-qualified-donee-status/apply-become-registered-charity/apply/create-application-checklist.html
@@ -17,8 +17,8 @@
 
       
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/apply/create-application-checklist.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/apply/create-application-checklist.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/apply/create-application-checklist.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/apply/create-application-checklist.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/demande-enregistrement-organisme-bienfaisance-donataire-reconnu/presenter-demande-organisme-bienfaisance/presenter/creer-liste-controle-demande.html"/>
 	
@@ -173,9 +173,9 @@
       <li><a href="/en.html">Canada.ca</a></li>
       <li><a href="https://www.canada.ca/en/services/taxes.html">Taxes</a></li>
       <li><a href="https://www.canada.ca/en/services/taxes/charities.html">Charities and giving</a></li>
-      <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status.html">Registering for charitable or other qualified donee status</a></li>
-      <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity.html">Apply to become a registered charity</a></li>
-      <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/apply.html">Apply for registration</a></li>
+      <li><a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status.html">Registering for charitable or other qualified donee status</a></li>
+      <li><a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity.html">Apply to become a registered charity</a></li>
+      <li><a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/apply.html">Apply for registration</a></li>
     </ol>
   </div>
 </nav>
