--- a/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/consequences-meeting-obligations-registration-non-compliance.html
+++ b/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/consequences-meeting-obligations-registration-non-compliance.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/consequences-meeting-obligations-registration-non-compliance.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/consequences-meeting-obligations-registration-non-compliance.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/consequences-meeting-obligations-registration-non-compliance.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/consequences-meeting-obligations-registration-non-compliance.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/demande-enregistrement-organisme-bienfaisance-donataire-reconnu/presenter-demande-organisme-bienfaisance/decider/consequences-ne-satisfaire-obligations-liees-a-enregistrement-inobservation.html"/>
 	
@@ -296,8 +296,8 @@ Consequences of not meeting the obligations of registration (non-compliance)</h1
     
         <h2>Related links</h2>
  <ul> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/penalties-suspensions.html">Penalties and suspensions</a></li> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/revoking-registered-status/consequences-revocation.html">Consequences of revocation</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/penalties-suspensions.html">Penalties and suspensions</a></li> 
+ <li><a href="https://cra-design.github.io/charities/revoking-registered-status/consequences-revocation.html">Consequences of revocation</a></li> 
 </ul>  <p>&nbsp;</p>   
     
 
