--- a/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/consequences-terminating-registration-voluntarily.html
+++ b/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/consequences-terminating-registration-voluntarily.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/consequences-terminating-registration-voluntarily.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/consequences-terminating-registration-voluntarily.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/consequences-terminating-registration-voluntarily.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/consequences-terminating-registration-voluntarily.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/demande-enregistrement-organisme-bienfaisance-donataire-reconnu/presenter-demande-organisme-bienfaisance/decider/consequences-mettre-fin-a-enregistrement-volontairement.html"/>
 	
@@ -289,14 +289,14 @@ Impact of terminating your charitable registration</h1>
 </li>
 <li><p>no longer qualifies for exemption from income tax as a registered charity</p>
 </li>
-<li><p>must transfer all remaining property to an <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/charities-giving-glossary.html#eligdon">eligible donee</a>, or be subject to a revocation tax equivalent to the property's full value</p>
+<li><p>must transfer all remaining property to an <a href="https://cra-design.github.io/charities/charities-giving-glossary.html#eligdon">eligible donee</a>, or be subject to a revocation tax equivalent to the property's full value</p>
 </li>
 <li><p>will have its name and the reason for its revocation posted in the&nbsp;<a href="http://canadagazette.gc.ca/rp-pr/publications-eng.html#a1">Canada Gazette</a> and online in the List of charities</p>
 </li>
-<li><p>will no longer be a <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/gi-067.html">charity</a> or <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/gi-068.html">public institution</a> for <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/checklists-charities/goods-services-tax-harmonized-sales-tax-gst-hst-checklist-charities.html">GST/HST</a> purposes which could affect the tax status of its supplies, the way it calculates its net tax and its ability to claim a partial rebate for the GST/HST it pays</p>
+<li><p>will no longer be a <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/gi-067.html">charity</a> or <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/gi-068.html">public institution</a> for <a href="https://cra-design.github.io/charities/checklists-charities/goods-services-tax-harmonized-sales-tax-gst-hst-checklist-charities.html">GST/HST</a> purposes which could affect the tax status of its supplies, the way it calculates its net tax and its ability to claim a partial rebate for the GST/HST it pays</p>
 </li>
 </ul>
-<p>For more information, see <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/revoking-registered-status/types-revocation.html#volrev">Voluntary revocation</a>.</p>
+<p>For more information, see <a href="https://cra-design.github.io/charities/revoking-registered-status/types-revocation.html#volrev">Voluntary revocation</a>.</p>
 
     
 
