--- a/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/deciding.html
+++ b/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/deciding.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/demande-enregistrement-organisme-bienfaisance-donataire-reconnu/presenter-demande-organisme-bienfaisance/decider.html"/>
 	
@@ -276,7 +276,7 @@ Make an informed decision about becoming a registered charity</h1>
     
         <p>Information to help you determine whether to apply to become a registered charity.</p>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/should-apply-registration.html"><strong>Determine if you should apply for charitable registration</strong></a></li>
+<li><a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/should-apply-registration.html"><strong>Determine if you should apply for charitable registration</strong></a></li>
 <li class="list-unstyled">Interactive tool to help you decide if applying for registration is right for you</li>
 </ul>
 <ul>
@@ -284,19 +284,19 @@ Make an informed decision about becoming a registered charity</h1>
 <li class="list-unstyled">Definitions and examples of the differences between registered charities and non-profit organizations</li>
 </ul>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/factors-that-will-prevent-organization-being-registered-a-charity.html"><strong>Factors that will prevent an organization from being registered as a charity</strong></a></li>
+<li><a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/factors-that-will-prevent-organization-being-registered-a-charity.html"><strong>Factors that will prevent an organization from being registered as a charity</strong></a></li>
 <li class="list-unstyled">Learn what will prevent your organization from being registered as a charity</li>
 </ul>
 <ul>
-<li><strong><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/consequences-terminating-registration-voluntarily.html">Impact of terminating your charitable registration</a></strong></li>
+<li><strong><a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/consequences-terminating-registration-voluntarily.html">Impact of terminating your charitable registration</a></strong></li>
 <li class="list-unstyled">Find out&nbsp;how requesting voluntary revocation will affect your organization</li>
 </ul>
 <ul>
-<li><strong><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/advantages-obligations-becoming-registered-charity.html">Advantages and obligations of becoming a registered charity</a></strong></li>
+<li><strong><a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/advantages-obligations-becoming-registered-charity.html">Advantages and obligations of becoming a registered charity</a></strong></li>
 <li class="list-unstyled">Learn the advantages and obligations of becoming registered</li>
 </ul>
 <ul>
-<li><strong><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/consequences-meeting-obligations-registration-non-compliance.html">Consequences of not meeting the obligations for registration (non-compliance)</a></strong></li>
+<li><strong><a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/consequences-meeting-obligations-registration-non-compliance.html">Consequences of not meeting the obligations for registration (non-compliance)</a></strong></li>
 <li class="list-unstyled">Sanctions and revocation</li>
 </ul>
 
