--- a/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/should-apply-registration/should-apply-registration.html
+++ b/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/should-apply-registration/should-apply-registration.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/should-apply-registration.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/should-apply-registration.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/should-apply-registration.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/should-apply-registration.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/demande-enregistrement-organisme-bienfaisance-donataire-reconnu/presenter-demande-organisme-bienfaisance/decider/devrais-presenter-demande-enregistrement.html"/>
 	
@@ -286,8 +286,8 @@ Should you apply for charitable registration?</h1>
 
     
         <p>The decision to register a charity is an important one. Registration as a charity gives an organization special tax privileges. A registered charity does not have to pay income tax and can issue tax receipts to donors.</p>
-<p>Before you apply, you should&nbsp;go to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/factors-that-will-prevent-organization-being-registered-a-charity.html">Factors that will prevent an organization from being registered as a charity</a>.</p>
-<p>If your organization is successful in registration, keep in mind&nbsp;there are certain responsibilities that come with being registered. For more information about these responsibilities, go to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/advantages-obligations-becoming-registered-charity.html">Advantages and obligations of registration</a>.</p>
+<p>Before you apply, you should&nbsp;go to <a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/factors-that-will-prevent-organization-being-registered-a-charity.html">Factors that will prevent an organization from being registered as a charity</a>.</p>
+<p>If your organization is successful in registration, keep in mind&nbsp;there are certain responsibilities that come with being registered. For more information about these responsibilities, go to <a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/advantages-obligations-becoming-registered-charity.html">Advantages and obligations of registration</a>.</p>
 <p><strong>To help you make a decision about registration, answer the six questions in the quiz below. </strong></p>
 
     
@@ -296,7 +296,7 @@ Should you apply for charitable registration?</h1>
 </div>
 <div class="mwspagination section">
 
-    <p><a class="btn btn-primary" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/should-apply-registration/registration-decision.html">Take the quiz!</a></p>
+    <p><a class="btn btn-primary" href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/should-apply-registration/registration-decision.html">Take the quiz!</a></p>
 
 
 
