--- a/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/charitable-purposes/advancement-religion.html
+++ b/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/charitable-purposes/advancement-religion.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/charitable-purposes/advancement-religion.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/charitable-purposes/advancement-religion.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/charitable-purposes/advancement-religion.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/charitable-purposes/advancement-religion.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/demande-enregistrement-organisme-bienfaisance-donataire-reconnu/presenter-demande-organisme-bienfaisance/etablir/fins-de-bienfaisance/avancement-religion.html"/>
 	
@@ -339,7 +339,7 @@ Advancement of religion</h1>
     
         <h2>Related link</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-r06-religion.html">Summary policy CSP-R06, Religion</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-r06-religion.html">Summary policy CSP-R06, Religion</a></li>
 </ul>
 
     
