--- a/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/establishing.html
+++ b/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/establishing.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/demande-enregistrement-organisme-bienfaisance-donataire-reconnu/presenter-demande-organisme-bienfaisance/etablir.html"/>
 	
@@ -276,19 +276,19 @@ Set up your organization before applying for registration</h1>
     
         <p>What you need to know before applying for charitable registration and what you need to consider before establishing yourself as a legal entity.</p>
 <ul class="lst-spcd">
-<li><p><strong><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/what-charitable.html">What is charitable?</a></strong></p>
+<li><p><strong><a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/what-charitable.html">What is charitable?</a></strong></p>
 <p>Purposes and activities that are considered charitable</p>
 </li>
-<li><p><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/charitable-purposes.html"><strong>Charitable purposes</strong></a></p>
+<li><p><a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/charitable-purposes.html"><strong>Charitable purposes</strong></a></p>
 <p>Description of the four categories of charity and examples of purposes for each</p>
 </li>
-<li><p><strong><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/what-a-governing-document.html">What is a governing document?</a></strong></p>
+<li><p><strong><a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/what-a-governing-document.html">What is a governing document?</a></strong></p>
 <p>A document that gives an organization its legal existence – learn what you have or need</p>
 </li>
-<li><p><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/types-registered-charities-designations.html"><strong>Types of registered charities (designations)</strong></a></p>
+<li><p><a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/types-registered-charities-designations.html"><strong>Types of registered charities (designations)</strong></a></p>
 <p>Based on your application, the <abbr title="Canada Revenue Agency">CRA</abbr> will designate you as a specific type of charity</p>
 </li>
-<li><p><strong><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/head-bodies-and-their-internal-divisions.html">Head bodies and internal divisions</a></strong></p>
+<li><p><strong><a href="https://cra-design.github.io/charities/policies-guidance/head-bodies-and-their-internal-divisions.html">Head bodies and internal divisions</a></strong></p>
 <p>Requirements for registering an organization as a head body or internal division</p>
 </li>
 </ul>
