--- a/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/what-a-governing-document/constitutions.html
+++ b/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/what-a-governing-document/constitutions.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/what-a-governing-document/constitutions.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/what-a-governing-document/constitutions.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/what-a-governing-document/constitutions.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/what-a-governing-document/constitutions.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/demande-enregistrement-organisme-bienfaisance-donataire-reconnu/presenter-demande-organisme-bienfaisance/etablir/sont-documents-constitutifs/constitutions.html"/>
 	
@@ -293,7 +293,7 @@ Constitutions</h1>
 
 <section class="alert alert-info">
 	<h2>For incorporated organizations</h2>
-	<p>The information on this page applies only to non-incorporated organizations. For incorporated organizations, go to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/what-a-governing-document/incorporation-documents.html">Incorporation documents</a>.</p>
+	<p>The information on this page applies only to non-incorporated organizations. For incorporated organizations, go to <a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/what-a-governing-document/incorporation-documents.html">Incorporation documents</a>.</p>
 </section>
 
 
@@ -324,7 +324,7 @@ Constitutions</h1>
     
         <h2>References</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/charitable-purposes.html">Charitable purposes</a></li>
+<li><a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/charitable-purposes.html">Charitable purposes</a></li>
 </ul>
 
     
