--- a/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/apply-registered-national-arts-service-organization.html
+++ b/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/apply-registered-national-arts-service-organization.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/apply-registered-national-arts-service-organization.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/apply-registered-national-arts-service-organization.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/apply-registered-national-arts-service-organization.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/apply-registered-national-arts-service-organization.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/demande-enregistrement-organisme-bienfaisance-donataire-reconnu/presenter-demande-enregistrement-autre-donataire-reconnu/presenter-demande-enregistrement-organisme-service-nationaux-domaine-arts.html"/>
 	
@@ -317,7 +317,7 @@ Applying for status as a registered national arts service organization</h1>
 <li>disseminating information</li>
 <li>providing scholarships, bursaries, and awards</li>
 </ul>
-<p>Once the organization has been granted registration by the <abbr title="Canada Revenue Agency ">CRA</abbr>, it is allowed to issue official donation receipts. A registered national arts service organization is considered a registered charity for operating purposes under the Income Tax Act. For more information, go to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity.html">Operating&nbsp;a registered charity</a>.</p>
+<p>Once the organization has been granted registration by the <abbr title="Canada Revenue Agency ">CRA</abbr>, it is allowed to issue official donation receipts. A registered national arts service organization is considered a registered charity for operating purposes under the Income Tax Act. For more information, go to <a href="https://cra-design.github.io/charities/operating-a-registered-charity.html">Operating&nbsp;a registered charity</a>.</p>
 <p>For a list of registered national arts service organizations, go to the <a href="https://apps.cra-arc.gc.ca/ebci/hacc/srch/pub/dsplyAdvncdSrch">Charities Listings - advanced search</a> and select &quot;Registered national arts service organization (RNASO)&quot; from the dropdown <strong>Category</strong> list.&nbsp;&nbsp;</p>
 <p>Please note that a registered national arts service organization is not a charity or public institution under the Excise Tax Act. For more information, go to <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/news101/news101-excise-gst-hst-news-no-101.html#_Toc474313325">Registered national arts service organizations and GST/HST</a>.</p>
 
@@ -334,8 +334,8 @@ Applying for status as a registered national arts service organization</h1>
 <li><a href="https://www.canada.ca/en/canadian-heritage/services/arts-organization-designation.html">National Arts Service Organization Designation</a></li>
 <li><a href="https://laws-lois.justice.gc.ca/eng/regulations/C.R.C.,_c._945/section-8700.html?txthl=8700">Regulation 8700 of the Income Tax Act</a></li>
 <li><a href="https://apps.cra-arc.gc.ca/ebci/hacc/srch/pub/dsplyBscSrch?request_locale=en">List of charities and certain other qualified donees</a><span class="nowrap"></span></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/books-records.html">Books and records</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/penalties-suspensions.html">Sanctions</a></li>
+<li><a href="https://cra-design.github.io/charities/operating-a-registered-charity/books-records.html">Books and records</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/penalties-suspensions.html">Sanctions</a></li>
 </ul>
 
     
