--- a/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-foreign-charity.html
+++ b/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-foreign-charity.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-foreign-charity.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-foreign-charity.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-foreign-charity.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-foreign-charity.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/demande-enregistrement-organisme-bienfaisance-donataire-reconnu/presenter-demande-enregistrement-autre-donataire-reconnu/demande-enregistrement-organismes-bienfaisance-situes-etranger.html"/>
 	
@@ -277,9 +277,9 @@ Applying for status as a foreign charity that has received a gift from His Majes
         <p>As a result of changes to the Income Tax Act, a foreign charity (which includes both a charitable organization and a charitable foundation) that has received a gift from His Majesty in right of Canada (the Government of Canada) can become a qualified donee if it meets certain criteria.</p>
 <p>To become a qualified donee, a foreign charity must apply for registration and be included on a publicly available list maintained by the Canada Revenue Agency (CRA). A foreign charity that is registered as a qualified donee will have this status for a 24-month period chosen by the <abbr title="Canada Revenue Agency ">CRA</abbr> that must include the date it received the gift from His Majesty in right of Canada. While it is a qualified donee, the foreign charity can issue official donation receipts and registered charities can make gifts to it.</p>
 <h2>Summary of recent legislative changes</h2>
-<p>Changes to the Act which took effect between January 1, 2012, and June 23, 2015, have affected the eligibility period and criteria for foreign charities. To find out more, go to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/foreign-charities-that-have-received-a-gift-majesty-right-canada-summary-recent-legislative-changes.html">Foreign charities that have received a gift from Her Majesty in right of Canada: Summary of recent legislative changes</a>&nbsp;(archived).</p>
+<p>Changes to the Act which took effect between January 1, 2012, and June 23, 2015, have affected the eligibility period and criteria for foreign charities. To find out more, go to <a href="https://cra-design.github.io/charities/policies-guidance/foreign-charities-that-have-received-a-gift-majesty-right-canada-summary-recent-legislative-changes.html">Foreign charities that have received a gift from Her Majesty in right of Canada: Summary of recent legislative changes</a>&nbsp;(archived).</p>
 <h2>Criteria and application process</h2>
-<p>For detailed information about the criteria for foreign charities that have received a gift from His Majesty in right of Canada, the application process and the supporting documentation a foreign charity has to submit, see <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/qualified-donee-foreign-charities-that-have-received-a-gift-majesty-right-canada-guidance.html">Guidance CG-023, Foreign charities that have received a gift from His Majesty in right of Canada</a>.&nbsp;</p>
+<p>For detailed information about the criteria for foreign charities that have received a gift from His Majesty in right of Canada, the application process and the supporting documentation a foreign charity has to submit, see <a href="https://cra-design.github.io/charities/policies-guidance/qualified-donee-foreign-charities-that-have-received-a-gift-majesty-right-canada-guidance.html">Guidance CG-023, Foreign charities that have received a gift from His Majesty in right of Canada</a>.&nbsp;</p>
 
     
 
@@ -294,7 +294,7 @@ Applying for status as a foreign charity that has received a gift from His Majes
 <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-foreign-charities-that-have-received-a-gift-majesty-right-canada.html">List</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/foreign-charities-that-have-received-a-gift-majesty-right-canada.html#receipts">Issuing official donation receipts</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/foreign-charities-that-have-received-a-gift-majesty-right-canada.html#books">Books and records</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-foreign-charities.html">Suspension,&nbsp;revocation, judicial review and&nbsp;objections</a>&nbsp;</li>
+<li><a href="https://cra-design.github.io/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-foreign-charities.html">Suspension,&nbsp;revocation, judicial review and&nbsp;objections</a>&nbsp;</li>
 </ul>
 
     
