--- a/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-municipal-public-body.html
+++ b/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-municipal-public-body.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-municipal-public-body.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-municipal-public-body.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-municipal-public-body.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-municipal-public-body.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/demande-enregistrement-organisme-bienfaisance-donataire-reconnu/presenter-demande-enregistrement-autre-donataire-reconnu/presenter-demande-enregistrement-organismes-municipaux-public.html"/>
 	
@@ -286,7 +286,7 @@ Ottawa ON &nbsp;K1A 0L5</p>
 <li>a complete list of the applicant's current officials</li>
 <li>the address for the physical location of its books and records (a post office box or rural route number alone is not enough)</li>
 </ul>
-<p>An applicant that meets the requirements will receive a letter confirming its registration and its name will be added to the publicly available list of qualified donees on the&nbsp;<abbr title="Canada Revenue Agency">CRA</abbr> website. If an applicant does not meet the requirements, it will receive a letter explaining why. An applicant that disagrees with the <abbr title="Canada Revenue Agency">CRA</abbr>'s decision can file an objection with the Minister of National Revenue through the&nbsp;<abbr title="Canada Revenue Agency">CRA</abbr> Appeals Branch. For more information, go to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-municipal-public-bodies.html#bjctns">Objections</a>.&nbsp;</p>
+<p>An applicant that meets the requirements will receive a letter confirming its registration and its name will be added to the publicly available list of qualified donees on the&nbsp;<abbr title="Canada Revenue Agency">CRA</abbr> website. If an applicant does not meet the requirements, it will receive a letter explaining why. An applicant that disagrees with the <abbr title="Canada Revenue Agency">CRA</abbr>'s decision can file an objection with the Minister of National Revenue through the&nbsp;<abbr title="Canada Revenue Agency">CRA</abbr> Appeals Branch. For more information, go to <a href="https://cra-design.github.io/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-municipal-public-bodies.html#bjctns">Objections</a>.&nbsp;</p>
 
     
 
@@ -301,7 +301,7 @@ Ottawa ON &nbsp;K1A 0L5</p>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-municipal-public-bodies-performing-a-function-government-canada-registered-qualified-donees.html">List</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/municipal-public-bodies-performing-a-function-government-canada.html#issuing">Issuing official donation receipts</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/municipal-public-bodies-performing-a-function-government-canada.html#books_records">Books and records</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-municipal-public-bodies.html">Suspension,&nbsp;revocation and objections</a></li>
+<li><a href="https://cra-design.github.io/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-municipal-public-bodies.html">Suspension,&nbsp;revocation and objections</a></li>
 </ul>
 
     
