--- a/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-registered-canadian-amateur-athletic-association.html
+++ b/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-registered-canadian-amateur-athletic-association.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-registered-canadian-amateur-athletic-association.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-registered-canadian-amateur-athletic-association.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-registered-canadian-amateur-athletic-association.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-registered-canadian-amateur-athletic-association.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/demande-enregistrement-organisme-bienfaisance-donataire-reconnu/presenter-demande-enregistrement-autre-donataire-reconnu/presenter-demande-enregistrement-association-canadienne-enregistree-sport-amateur.html"/>
 	
@@ -278,11 +278,11 @@ Applying to become a registered Canadian amateur athletic association</h1>
 <h2>To apply</h2>
 <p>To apply to be an RCAAA under the Income Tax Act,&nbsp;complete the online form available through MyBA.</p>
 <ol>
-<li>To access your association’s account through <abbr title="My Business Account">MyBA</abbr>, you need a business number (BN) <strong>and</strong> a pending RR account. Follow the <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/business-account.html">instructions</a> under the tab “Applicant organization” to obtain them and to log into <abbr title="My Business Account">MyBA</abbr>.</li>
+<li>To access your association’s account through <abbr title="My Business Account">MyBA</abbr>, you need a business number (BN) <strong>and</strong> a pending RR account. Follow the <a href="https://cra-design.github.io/charities/operating-a-registered-charity/business-account.html">instructions</a> under the tab “Applicant organization” to obtain them and to log into <abbr title="My Business Account">MyBA</abbr>.</li>
 <li>Once logged into <abbr title="My Business Account">MyBA</abbr>, under your RR account, select the link “Apply to be a registered charity or <abbr title="Registered Canadian amateur athletic association">RCAAA</abbr>”.</li>
-<li>You can now start completing the online form Apply to be a Registered Canadian Amateur Athletic Association (RCAAA) under the Income Tax Act. For more information, see <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/apply/submit-application.html#tps">Tips about the online form</a>.</li>
+<li>You can now start completing the online form Apply to be a Registered Canadian Amateur Athletic Association (RCAAA) under the Income Tax Act. For more information, see <a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/apply/submit-application.html#tps">Tips about the online form</a>.</li>
 </ol>
-<p>If you have difficulty accessing the digital services, or have questions regarding the application you can <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/contact-charities-directorate.html">contact the Charities Directorate</a>.</p>
+<p>If you have difficulty accessing the digital services, or have questions regarding the application you can <a href="https://cra-design.github.io/charities/contact-charities-directorate.html">contact the Charities Directorate</a>.</p>
 <p>Authorized representatives can use <a href="https://www.canada.ca/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a> to apply on behalf of their client organization.</p>
 <h2>Criteria</h2>
 <p>To be registered as a Canadian amateur athletic association, the association that is applying must be created and resident in Canada and it must have the promotion of amateur athletics in Canada <strong>nation-wide</strong> as its exclusive purpose and exclusive function.&nbsp;&nbsp;</p>
@@ -323,7 +323,7 @@ Applying to become a registered Canadian amateur athletic association</h1>
 <li><a href="https://apps.cra-arc.gc.ca/ebci/hacc/srch/pub/dsplyBscSrch?request_locale=en">List of charities and certain other qualified donees</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/canadian-amateur-athletic-associations.html#ss">Issuing official donation receipts</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/canadian-amateur-athletic-associations.html#bk">Books and records</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-rcaaa.html">Sanctions and objections</a></li>
+<li><a href="https://cra-design.github.io/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-rcaaa.html">Sanctions and objections</a></li>
 </ul>
 
     
