--- a/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/her-majesty-united-nations-qualified-donee-status.html
+++ b/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/her-majesty-united-nations-qualified-donee-status.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/her-majesty-united-nations-qualified-donee-status.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/her-majesty-united-nations-qualified-donee-status.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/her-majesty-united-nations-qualified-donee-status.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/her-majesty-united-nations-qualified-donee-status.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/demande-enregistrement-organisme-bienfaisance-donataire-reconnu/presenter-demande-enregistrement-autre-donataire-reconnu/sa-majeste-nations-unies-statut-donataire-reconnu.html"/>
 	
