--- a/registering-charitable-qualified-donee-status/disaster-emergency-relief.html
+++ b/registering-charitable-qualified-donee-status/disaster-emergency-relief.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/disaster-emergency-relief.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/disaster-emergency-relief.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/disaster-emergency-relief.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/disaster-emergency-relief.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/demande-enregistrement-organisme-bienfaisance-donataire-reconnu/secours-cas-desastres-autres-situations-urgence.html"/>
 	
@@ -292,10 +292,10 @@ Disaster or emergency relief</h1>
 	<h2>Important notice</h2>
 	<p>If you are a registered charity and want to help victims of a disaster or emergency:</p>
 <ul>
-<li>you can raise funds and transfer them to a <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/charities-giving-glossary.html#qualdonee">qualified donee</a>; or</li>
+<li>you can raise funds and transfer them to a <a href="https://cra-design.github.io/charities/charities-giving-glossary.html#qualdonee">qualified donee</a>; or</li>
 <li>you can carry out your own activities within the scope of your charitable purposes.</li>
 </ul>
-<p>The <abbr title="Canada Revenue Agency" style="">CRA</abbr> is available to provide information which may be of assistance to registered charities wishing to contribute to disaster or emergency relief efforts. If you have any questions, please feel free to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/contact-charities-directorate.html">contact the Charities Directorate</a>.</p>
+<p>The <abbr title="Canada Revenue Agency" style="">CRA</abbr> is available to provide information which may be of assistance to registered charities wishing to contribute to disaster or emergency relief efforts. If you have any questions, please feel free to <a href="https://cra-design.github.io/charities/contact-charities-directorate.html">contact the Charities Directorate</a>.</p>
 
 </section>
 
@@ -310,7 +310,7 @@ Disaster or emergency relief</h1>
 <section class="alert alert-info">
 	<h2>Important notice</h2>
 	<p>On June 23, 2022, Budget Implementation Act, 2022, No. 1, received Royal Assent. This change in legislation includes new rules that allow charities to make grants to non-qualified donees. As a result, some of the information on this page could change.</p>
-<p>On December 19, 2023, following a public feedback period, the Canada Revenue Agency (CRA) posted the guidance document <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/charities-making-grants-non-qualified-donees.html">CG-032, Registered charities making grants to non-qualified donees</a>. This document explains how the <abbr title="Canada Revenue Agency">CRA</abbr> will administer the recent changes to the Income Tax Act.</p>
+<p>On December 19, 2023, following a public feedback period, the Canada Revenue Agency (CRA) posted the guidance document <a href="https://cra-design.github.io/charities/policies-guidance/charities-making-grants-non-qualified-donees.html">CG-032, Registered charities making grants to non-qualified donees</a>. This document explains how the <abbr title="Canada Revenue Agency">CRA</abbr> will administer the recent changes to the Income Tax Act.</p>
 <p>The <abbr title="Canada Revenue Agency">CRA</abbr> is in the process of reviewing and updating all related guidance products and web pages to ensure they are consistent with the new rules.</p>
 
 </section>
@@ -329,7 +329,7 @@ Disaster or emergency relief</h1>
 <p>It is important to note that disaster or emergency relief organizations must meet the same essential requirements as all other applicants for charitable registration. This includes the need for the organizations to show how they will direct and control their resources and activities outside Canada. In urgent circumstances, the <abbr title="Canada Revenue Agency">CRA</abbr> will expedite consideration of these applications.</p>
 <p>Applicant organizations should also be aware that in the immediate aftermath of a disaster or emergency, the affected area is often volatile and dangerous. Typically, local authorities limit access to an affected area to well-established, experienced relief organizations. Accordingly, applicants should consider donating money or goods, or offering services, to existing qualified donees (e.g., other registered charities) that have the experience, resources, and infrastructures already in place to respond rapidly and effectively in such locations.</p>
 <p>For a list of registered charities, see the <abbr title="Canada Revenue Agency">CRA</abbr>'s <a href="https://apps.cra-arc.gc.ca/ebci/hacc/srch/pub/dsplyBscSrch?request_locale=en">List of charities</a>.</p>
-<p>For more information on donating to disaster or emergency relief organizations, go to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/giving-charity-information-donors/donating-help-victims-a-disaster-other-emergency.html">Donating to help victims of a disaster or other emergency</a>,&nbsp;or <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/contact-charities-directorate.html">contact the Charities Directorate</a>.</p>
+<p>For more information on donating to disaster or emergency relief organizations, go to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/giving-charity-information-donors/donating-help-victims-a-disaster-other-emergency.html">Donating to help victims of a disaster or other emergency</a>,&nbsp;or <a href="https://cra-design.github.io/charities/contact-charities-directorate.html">contact the Charities Directorate</a>.</p>
 
     
 
