--- a/revoking-registered-status/annulment-charitable-registration.html
+++ b/revoking-registered-status/annulment-charitable-registration.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/revoking-registered-status/annulment-charitable-registration.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/revoking-registered-status/annulment-charitable-registration.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/revoking-registered-status/annulment-charitable-registration.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/revoking-registered-status/annulment-charitable-registration.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/revocation-enregistrement/annulation-enregistrement-organisme-bienfaisance.html"/>
 	
@@ -308,14 +308,14 @@ Annulment of charitable registration</h1>
 <li>you cannot issue official donation receipts</li>
 <li>you are no longer exempt from income tax as a registered charity</li>
 <li>your name&nbsp;will&nbsp;be added to the list of annulled charities in the <a href="https://apps.cra-arc.gc.ca/ebci/hacc/srch/pub/dsplyBscSrch?request_locale=en">List of charities</a></li>
-<li>you will not be a charity for <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/checklists-charities/goods-services-tax-harmonized-sales-tax-gst-hst-checklist-charities.html">GST/HST</a> purposes, which could affect:<ul>
+<li>you will not be a charity for <a href="https://cra-design.github.io/charities/checklists-charities/goods-services-tax-harmonized-sales-tax-gst-hst-checklist-charities.html">GST/HST</a> purposes, which could affect:<ul>
 <li>the tax status of your supplies</li>
 <li>the way you calculate your net tax</li>
 <li>your ability to claim a rebate for GST/HST</li>
 </ul>
 </li>
 </ul>
-<p>An annulled charity does <strong>not</strong> have to file Form T2046, Tax Return Where Registration of a Charity is Revoked, and does <strong>not</strong> have to pay <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/charities-giving-glossary.html#revocationtax">revocation tax</a>.</p>
+<p>An annulled charity does <strong>not</strong> have to file Form T2046, Tax Return Where Registration of a Charity is Revoked, and does <strong>not</strong> have to pay <a href="https://cra-design.github.io/charities/charities-giving-glossary.html#revocationtax">revocation tax</a>.</p>
 
     
 
