--- a/revoking-registered-status/consequences-revocation.html
+++ b/revoking-registered-status/consequences-revocation.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/revoking-registered-status/consequences-revocation.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/revoking-registered-status/consequences-revocation.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/revoking-registered-status/consequences-revocation.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/revoking-registered-status/consequences-revocation.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/revocation-enregistrement/consequences-revocation.html"/>
 	
@@ -288,15 +288,15 @@ Consequences of revocation</h1>
 <li>cannot issue official donation receipts</li>
 <li>do not qualify for exemption from income tax as a registered charity&nbsp;&nbsp;</li>
 <li>will have your name and the reason for revocation published in the <a href="http://canadagazette.gc.ca/rp-pr/publications-eng.html#a1">Canada Gazette</a> and in the <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities-listings.html">List of charities </a></li>
-<li>must transfer all your remaining assets to an <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/charities-giving-glossary.html#eligdon">eligible donee</a> or pay <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/revoking-registered-status/revocation-tax-t2046-tax-return.html">revocation tax</a></li>
-<li>will not be a charity for <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/checklists-charities/goods-services-tax-harmonized-sales-tax-gst-hst-checklist-charities.html">GST/HST</a> purposes which could affect:<ul>
+<li>must transfer all your remaining assets to an <a href="https://cra-design.github.io/charities/charities-giving-glossary.html#eligdon">eligible donee</a> or pay <a href="https://cra-design.github.io/charities/revoking-registered-status/revocation-tax-t2046-tax-return.html">revocation tax</a></li>
+<li>will not be a charity for <a href="https://cra-design.github.io/charities/checklists-charities/goods-services-tax-harmonized-sales-tax-gst-hst-checklist-charities.html">GST/HST</a> purposes which could affect:<ul>
 <li>the tax status of your supplies</li>
 <li>the way you calculate your net tax</li>
 <li>your ability to claim a rebate for GST/HST</li>
 </ul>
 </li>
 </ul>
-<p>If you use your remaining assets for your charitable&nbsp;<span lang="EN">activities or transfer them to an eligible donee</span> during the <span class="nowrap"><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-w03-winding-period.html">winding-up period</a></span>, your revocation tax may be zero.</p>
+<p>If you use your remaining assets for your charitable&nbsp;<span lang="EN">activities or transfer them to an eligible donee</span> during the <span class="nowrap"><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-w03-winding-period.html">winding-up period</a></span>, your revocation tax may be zero.</p>
 
     
 
@@ -308,7 +308,7 @@ Consequences of revocation</h1>
     
         <h2>Related links</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-reregistration.html">Apply for re-registration</a></li>
+<li><a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-reregistration.html">Apply for re-registration</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2046.html">T2046 Return Where Registration of a Charity is Revoked</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc4424.html">RC4424, Completing the Tax Return Where Registration of a Charity is Revoked</a></li>
 </ul>
