--- a/revoking-registered-status/revocation-tax-t2046-tax-return.html
+++ b/revoking-registered-status/revocation-tax-t2046-tax-return.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/revoking-registered-status/revocation-tax-t2046-tax-return.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/revoking-registered-status/revocation-tax-t2046-tax-return.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/revoking-registered-status/revocation-tax-t2046-tax-return.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/revoking-registered-status/revocation-tax-t2046-tax-return.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/revocation-enregistrement/impot-revocation-declaration-impot-t2046.html"/>
 	
@@ -286,8 +286,8 @@ Revocation tax and the T2046 tax return</h1>
           <p>Revocation tax is a tax that you owe if you lose your charitable registration. The tax is equal to 100% of the value of all remaining assets, after you have paid all your debts.</p>  <p>You will owe revocation tax unless you meet <strong>all</strong> the following conditions:</p>  <ul> 
  <li> <p>you apply for and are granted re-registration within one year from the date of the notice of intention to revoke that was sent to you</p> </li> 
  <li> <p>you pay all other taxes, penalties, and interest that you are liable for under the Income Tax Act or the Excise Tax Act before the date of re-registration</p> </li> 
- <li> <p>you file all missing <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/t3010-charity-return-filing-information.html">information returns</a>&nbsp;(Form T3010s) and financial statements before the date of re-registration</p> </li> 
-</ul>  <p>You can reduce the amount of revocation tax you owe by using your remaining assets&nbsp;on your charitable activities. You can also transfer your assets to an&nbsp;<a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/charities-giving-glossary.html#eligdon">eligible donee</a> during the winding-up period. This keeps your assets in the charitable sector.</p>  
+ <li> <p>you file all missing <a href="https://cra-design.github.io/charities/operating-a-registered-charity/t3010-charity-return-filing-information.html">information returns</a>&nbsp;(Form T3010s) and financial statements before the date of re-registration</p> </li> 
+</ul>  <p>You can reduce the amount of revocation tax you owe by using your remaining assets&nbsp;on your charitable activities. You can also transfer your assets to an&nbsp;<a href="https://cra-design.github.io/charities/charities-giving-glossary.html#eligdon">eligible donee</a> during the winding-up period. This keeps your assets in the charitable sector.</p>  
     
 
 
@@ -300,9 +300,9 @@ Revocation tax and the T2046 tax return</h1>
 <p>The winding-up period, also called the revocation period, starts the day <strong>after</strong> we issue the T2051A or the letter that serves as the notice of intention to revoke and ends one year later. During this period, you have to complete and file <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2046.html">Form T2046, Tax Return&nbsp;Where Registration of a Charity is Revoked</a>, and pay the revocation tax.</p>
 <p>You must also send us:</p>
 <ul>
-<li><p><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/before-file.html">complete information return(s)</a> <span lang="EN">for the period(s) between the last Form T3010, Registered Charity Information Return filed, and the start of your winding-up period</span></p>
+<li><p><a href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/before-file.html">complete information return(s)</a> <span lang="EN">for the period(s) between the last Form T3010, Registered Charity Information Return filed, and the start of your winding-up period</span></p>
 </li>
-<li><p><span lang="EN">a </span><span><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/before-file.html"><span lang="EN">complete information return</span></a></span><span lang="EN"> covering the same period as Form T2046</span></p>
+<li><p><span lang="EN">a </span><span><a href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/before-file.html"><span lang="EN">complete information return</span></a></span><span lang="EN"> covering the same period as Form T2046</span></p>
 </li>
 </ul>
 <p>If you send us this information and pay the revocation tax before the due date, the winding-up period can be shorter.</p>
@@ -324,15 +324,15 @@ Revocation tax and the T2046 tax return</h1>
 </ul>
 <p>The revocation tax is the total of the following:</p>
 <ul>
-<li>the <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/charities-giving-glossary.html#fmv">fair market value</a> of your property on Day 1</li>
-<li>any <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/charities-giving-glossary.html#appropriation">appropriations</a> that took place starting&nbsp;120 days&nbsp;before Day 1 and after</li>
+<li>the <a href="https://cra-design.github.io/charities/charities-giving-glossary.html#fmv">fair market value</a> of your property on Day 1</li>
+<li>any <a href="https://cra-design.github.io/charities/charities-giving-glossary.html#appropriation">appropriations</a> that took place starting&nbsp;120 days&nbsp;before Day 1 and after</li>
 <li>the income received during the winding-up period</li>
 </ul>
 <p>Less:</p>
 <ul>
 <li>any expenditures&nbsp;on your charitable activities during the winding-up period</li>
 <li>any debts your charity owes on Day 1</li>
-<li>any property transferred to an <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/charities-giving-glossary.html#eligdon"><span><span lang="EN">eligible donee</span></span></a> during the winding-up period</li>
+<li>any property transferred to an <a href="https://cra-design.github.io/charities/charities-giving-glossary.html#eligdon"><span><span lang="EN">eligible donee</span></span></a> during the winding-up period</li>
 </ul>
 <p>If you owe revocation tax, send us a cheque or money order payable to the Receiver General for Canada when you file your Form T2046.</p>
 
@@ -371,7 +371,7 @@ Revocation tax and the T2046 tax return</h1>
 
 <section class="alert alert-info">
 	<h3>Note</h3>
-	<p>A charity that has been revoked must keep its books and records. For more information, go to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/books-records.html">Books and records</a>.</p>
+	<p>A charity that has been revoked must keep its books and records. For more information, go to <a href="https://cra-design.github.io/charities/operating-a-registered-charity/books-records.html">Books and records</a>.</p>
 </section>
 
 
@@ -402,7 +402,7 @@ Ottawa ON &nbsp;K1A 0L5</p>
     
         <h2><strong>Related links</strong></h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-reregistration.html">Apply for re-registration</a></li>
+<li><a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-reregistration.html">Apply for re-registration</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2046.html">T2046, Return Where Registration of a Charity is Revoked</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc4424.html">RC4424, Completing the Tax Return Where Registration of a Charity is Revoked</a></li>
 </ul>
