--- a/operating-a-registered-charity/annual-spending-requirement-disbursement-quota/meeting-disbursement-quota.html
+++ b/operating-a-registered-charity/annual-spending-requirement-disbursement-quota/meeting-disbursement-quota.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/checklists-charities/meeting-disbursement-quota.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/checklists-charities/meeting-disbursement-quota.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/checklists-charities/meeting-disbursement-quota.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/checklists-charities/meeting-disbursement-quota.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/listes-controle-organismes-bienfaisance/respecter-contingent-versements.html"/>
 	
@@ -301,9 +301,9 @@ Meeting the disbursement quota</h1>
         <h2 class="h4Size">Checklist</h2>
 <p><span lang="EN-US">☐ </span>Determine&nbsp;your spending requirement (disbursement quota) at the <strong>start </strong>of the fiscal period.</p>
 <ul>
-<li>If completed,&nbsp;use the amount on <strong>line 5910</strong> of <strong>Schedule 6 - Detailed Financial Information</strong> on the Registered Charity Information Return&nbsp;you will file for the fiscal period that just ended. See <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/annual-spending-requirement-disbursement-quota/disbursement-quota-calculation.html">Disbursement quota calculation</a>.</li>
+<li>If completed,&nbsp;use the amount on <strong>line 5910</strong> of <strong>Schedule 6 - Detailed Financial Information</strong> on the Registered Charity Information Return&nbsp;you will file for the fiscal period that just ended. See <a href="https://cra-design.github.io/charities/operating-a-registered-charity/annual-spending-requirement-disbursement-quota/disbursement-quota-calculation.html">Disbursement quota calculation</a>.</li>
 </ul>
-<p><span lang="EN-US">☐ </span>If applicable, make note of any disbursement quota shortfalls from the previous year that need to be made up or any excesses that may be applied to meet the current year's spending requirement. See <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/annual-spending-requirement-disbursement-quota/disbursement-quota-shortfalls-excesses.html">Disbursement quota shortfalls and excesses</a>.</p>
+<p><span lang="EN-US">☐ </span>If applicable, make note of any disbursement quota shortfalls from the previous year that need to be made up or any excesses that may be applied to meet the current year's spending requirement. See <a href="https://cra-design.github.io/charities/operating-a-registered-charity/annual-spending-requirement-disbursement-quota/disbursement-quota-shortfalls-excesses.html">Disbursement quota shortfalls and excesses</a>.</p>
 <p><span lang="EN-US">☐ </span>Separate charitable expenditures from other expenditures such as management and administration, political activity, and fundraising and keep track of these throughout the fiscal period as well as amounts gifted to qualified donees.</p>
 <p><span lang="EN-US">☐&nbsp;When completing Form T3010, enter the proper amounts on</span></p>
 <ul>
@@ -328,7 +328,7 @@ Meeting the disbursement quota</h1>
 <p style="margin-left: 40px;"><span lang="EN-US">☐&nbsp;gifts to&nbsp;qualified donees&nbsp;(line 5050)</span></p>
 <p style="margin-left: 40px;"><span lang="EN-US">☐&nbsp;grants to non-qualified donees (line 5045)</span></p>
 <p><strong>Minus</strong></p>
-<p><span lang="EN-US">☐&nbsp;any&nbsp;<a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/charities-giving-glossary.html#desgif">designated gifts</a></span></p>
+<p><span lang="EN-US">☐&nbsp;any&nbsp;<a href="https://cra-design.github.io/charities/charities-giving-glossary.html#desgif">designated gifts</a></span></p>
 <p>☐&nbsp;the amount of the special reduction approved in writing by the Canada Revenue Agency (CRA)&nbsp;for the fiscal period (line 5750)</p>
 
     
@@ -341,10 +341,10 @@ Meeting the disbursement quota</h1>
     
         <h2>Related topics<abbr title="Canada Revenue Agency"></abbr></h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/charitable-activities.html">Charitable activities</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/receiving-gifts/what-a-gift.html">What is a gift?</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/receiving-gifts/anti-avoidance-rules-designated-gifts.html">Anti-avoidance rules and designated gifts</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/charities-making-grants-non-qualified-donees.html#toc1">Guidance CG-032, Registered charities making grants to non-qualified donees</a></li>
+<li><a href="https://cra-design.github.io/charities/operating-a-registered-charity/charitable-activities.html">Charitable activities</a></li>
+<li><a href="https://cra-design.github.io/charities/operating-a-registered-charity/receiving-gifts/what-a-gift.html">What is a gift?</a></li>
+<li><a href="https://cra-design.github.io/charities/operating-a-registered-charity/receiving-gifts/anti-avoidance-rules-designated-gifts.html">Anti-avoidance rules and designated gifts</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/charities-making-grants-non-qualified-donees.html#toc1">Guidance CG-032, Registered charities making grants to non-qualified donees</a></li>
 </ul>
 <p><strong>This checklist is for the charity's use only. Do not mail to the <abbr title="Canada Revenue Agency">CRA</abbr> or file with the return.</strong></p>
 
