--- a/other-organizations-that-issue-donation-receipts-qualified-donees/other-organizations-that-issue-donation-receipts-qualified-donees.html
+++ b/other-organizations-that-issue-donation-receipts-qualified-donees/other-organizations-that-issue-donation-receipts-qualified-donees.html
@@ -338,9 +338,9 @@ Other organizations that can issue donation receipts (qualified donees)</h1>
         <h2>Related links</h2>
 <ul>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications.html"><span><span><span><span><span><span><span><span><span><span>CRA forms and publications</span></span></span></span></span></span></span></span></span></span></a><span><span><span><span><span lang="EN-CA"></span></span></span></span></span></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/charities-giving-a-index.html"><span><span><span><span><span><span><span><span><span><span>Alphabetical index of topics</span></span></span></span></span></span></span></span></span></span></a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/charities-giving-glossary.html"><span><span><span><span><span><span><span><span><span><span>Glossary</span></span></span></span></span></span></span></span></span></span></a><span><span><span><span><span lang="EN-CA"></span></span></span></span></span></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/contact-charities-directorate.html"><span><span><span><span><span><span><span><span><span><span>Contact information</span></span></span></span></span></span></span></span></span></span></a></li>
+<li><a href="https://cra-design.github.io/charities/charities-giving-a-index.html"><span><span><span><span><span><span><span><span><span><span>Alphabetical index of topics</span></span></span></span></span></span></span></span></span></span></a></li>
+<li><a href="https://cra-design.github.io/charities/charities-giving-glossary.html"><span><span><span><span><span><span><span><span><span><span>Glossary</span></span></span></span></span></span></span></span></span></span></a><span><span><span><span><span lang="EN-CA"></span></span></span></span></span></li>
+<li><a href="https://cra-design.github.io/charities/contact-charities-directorate.html"><span><span><span><span><span><span><span><span><span><span>Contact information</span></span></span></span></span></span></span></span></span></span></a></li>
 </ul>
 
     
