--- a/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/what-a-governing-document/trusts.html
+++ b/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/what-a-governing-document/trusts.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/what-a-governing-document/trusts.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/what-a-governing-document/trusts.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/what-a-governing-document/trusts.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/what-a-governing-document/trusts.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/demande-enregistrement-organisme-bienfaisance-donataire-reconnu/presenter-demande-organisme-bienfaisance/etablir/sont-documents-constitutifs/fiducies.html"/>
 	
@@ -313,7 +313,7 @@ Trusts</h1>
     
         <h2>References</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/trust-document.html">Trust document, CG-009</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/trust-document.html">Trust document, CG-009</a></li>
 </ul>
 
     
