--- a/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-municipality.html
+++ b/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-municipality.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-municipality.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-municipality.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-municipality.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-municipality.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/demande-enregistrement-organisme-bienfaisance-donataire-reconnu/presenter-demande-enregistrement-autre-donataire-reconnu/presenter-demande-enregistrement-municipalite.html"/>
 	
@@ -290,7 +290,7 @@ The Canada Revenue Agency (CRA) maintains a list of municipalities that&nbsp;sho
 <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/municipalities.html">List</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/municipalities.html#Issuing_official_donation_receipts">Issuing official donation receipts</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/municipalities.html#bks">Books and records</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-municipalities.html">Suspension, revocation and objections</a></li>
+<li><a href="https://cra-design.github.io/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-municipalities.html">Suspension, revocation and objections</a></li>
 </ul>
 
     
