--- a/charities-and-giving.html
+++ b/charities-and-giving.html
@@ -511,11 +511,11 @@ background-color: #26384a !important
             <h2 class="wb-inv">Services and information</h2>
             <div class="wb-eqht row">
                 <div class="col-lg-4 col-md-6">
-                    <h3><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/list-charities/list-charities-other-qualified-donees.html">List of charities and other qualified donees</a></h3>
+                    <h3><a href="https://cra-design.github.io/charities/list-charities/list-charities-other-qualified-donees.html">List of charities and other qualified donees</a></h3>
                     <p>Find a charity or other qualified donee, their registered status, and their publicly available information.</p>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <h3><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees.html">Other organizations that can issue donation receipts</a></h3>
+                    <h3><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees.html">Other organizations that can issue donation receipts</a></h3>
                     <p>Lists of qualified donees, their application processes and obligations.</p>
                 </div>
                 <div class="col-lg-4 col-md-6">
@@ -543,7 +543,7 @@ background-color: #26384a !important
                     <p>Audit process, consequences of <span class="nowrap">non-compliance,</span> sanctions and appeal rights.</p>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <h3><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/giving-charity-information-donors.html">Giving to charity</a></h3>
+                    <h3><a href="https://cra-design.github.io/charities/giving-charity-information-donors.html">Giving to charity</a></h3>
                     <p>Who can issue official donation receipts, how to claim donations on your income tax and benefit return, how to donate wisely and avoid fraud.</p>
                 </div>
                 <div class="col-lg-4 col-md-6">
@@ -555,7 +555,7 @@ background-color: #26384a !important
                     <p>Recent news and updates on our web pages.</p>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <h3><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/about-registered-charities.html">About registered charities</a></h3>
+                    <h3><a href="https://cra-design.github.io/charities/about-registered-charities.html">About registered charities</a></h3>
                     <p>Their regulation and obligations, how they differ from non-profit organizations.</p>
                 </div>
             </div>
